finished filter product by brand in Category page - Storefront

--- a/nextjs-frontend-user/src/styles/globals.css
+++ b/nextjs-frontend-user/src/styles/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+
+
 body {
   background: #3e3e3f;
 }
@@ -75,4 +77,28 @@ body {
   width: 100%;
   max-width: 1200px;
   margin: 20px auto;
+}
+
+/* Custom scrollbar */
+::-webkit-scrollbar {
+  width: 8px; /* Độ rộng của scrollbar */
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1; /* Màu nền track */
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(
+    180deg,
+    #007bff,
+    #00c6ff
+  ); /* Màu của thanh cuộn */
+  border-radius: 10px;
+  transition: background 0.3s ease-in-out;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(180deg, #0056b3, #00a6ff); /* Hover */
 }
