--- a/nextjs-frontend-user/src/styles/LoginForm.css
+++ b/nextjs-frontend-user/src/styles/LoginForm.css
@@ -8,13 +8,15 @@
   width: 450px;
   margin: 100 auto;
   border-radius: 20px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family:
+    -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+    "Helvetica Neue", sans-serif;
 }
 
 ::placeholder {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family:
+    -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+    "Helvetica Neue", sans-serif;
 }
 
 .form button {
@@ -115,22 +117,22 @@
 }
 
 .line {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 20px 0;
-  }
-  
-  .line::before,
-  .line::after {
-    content: "";
-    width: 40%;
-    height: 1px;
-    background-color: #ccc;
-    margin: 0 10px;
-  }
-  
-  .line span {
-    font-size: 14px;
-    color: #666;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0;
+}
+
+.line::before,
+.line::after {
+  content: "";
+  width: 40%;
+  height: 1px;
+  background-color: #ccc;
+  margin: 0 10px;
+}
+
+.line span {
+  font-size: 14px;
+  color: #666;
+}
