--- a/nextjs-frontend-user/src/styles/cart.module.css
+++ b/nextjs-frontend-user/src/styles/cart.module.css
@@ -52,7 +52,9 @@
 
 .quantityButton {
   cursor: pointer; /* Con trỏ chuột */
-  transition: transform 0.2s ease, box-shadow 0.2s ease; /* Hiệu ứng */
+  transition:
+    transform 0.2s ease,
+    box-shadow 0.2s ease; /* Hiệu ứng */
 }
 
 .quantityButton:hover {
@@ -63,8 +65,6 @@
   transform: scale(0.95); /* Nhỏ lại khi nhấn */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Tạo bóng */
 }
-
-
 
 /* Thông tin đơn hàng */
 .orderSummary {
