--- a/nextjs-frontend-user/src/styles/cate-carousel.css
+++ b/nextjs-frontend-user/src/styles/cate-carousel.css
@@ -1,6 +1,5 @@
 .cate-carousel-container {
   position: relative;
-
 }
 
 .cate-carousel-item img {
@@ -22,7 +21,10 @@
   z-index: 10;
   opacity: 0;
   cursor: pointer;
-  transition: opacity 0.5s ease, transform 0.3s ease, box-shadow 0.3s ease;
+  transition:
+    opacity 0.5s ease,
+    transform 0.3s ease,
+    box-shadow 0.3s ease;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
