--- a/nextjs-frontend-user/src/styles/cate-lap.css
+++ b/nextjs-frontend-user/src/styles/cate-lap.css
@@ -30,7 +30,9 @@
   cursor: pointer;
   z-index: 10;
   opacity: 0;
-  transition: opacity 0.5s ease, transform 0.3s ease;
+  transition:
+    opacity 0.5s ease,
+    transform 0.3s ease;
 }
 
 .cate-lap-slide-container:hover .cate-lap-next,
