--- a/nextjs-frontend-user/src/styles/ear-phone.css
+++ b/nextjs-frontend-user/src/styles/ear-phone.css
@@ -3,7 +3,7 @@
 }
 
 .ear-phone-slide-container {
-    overflow: hidden;
+  overflow: hidden;
 }
 
 .ear-phone-next,
@@ -21,7 +21,9 @@
   cursor: pointer;
   z-index: 10;
   opacity: 0;
-  transition: opacity 0.5s ease, transform 0.3s ease;
+  transition:
+    opacity 0.5s ease,
+    transform 0.3s ease;
 }
 
 .ear-phone-slide-container:hover .ear-phone-next,
