--- a/nextjs-frontend-user/src/styles/product-list.css
+++ b/nextjs-frontend-user/src/styles/product-list.css
@@ -17,7 +17,9 @@
   cursor: pointer;
   z-index: 10;
   opacity: 0;
-  transition: opacity 0.5s ease, transform 0.3s ease;
+  transition:
+    opacity 0.5s ease,
+    transform 0.3s ease;
 }
 
 .pro-list-container:hover .pro-list-next,
@@ -80,4 +82,3 @@
 .image-container img.loaded {
   filter: blur(0);
 }
-
