--- a/nextjs-frontend-user/src/styles/scroll-to-top.css
+++ b/nextjs-frontend-user/src/styles/scroll-to-top.css
@@ -14,7 +14,10 @@
   filter: blur(5px);
   transform: scale(0.8);
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-  transition: opacity 0.5s ease, filter 0.5s ease, transform 0.3s ease-in-out;
+  transition:
+    opacity 0.5s ease,
+    filter 0.5s ease,
+    transform 0.3s ease-in-out;
 }
 
 .scroll-to-top.visible {
