create: layout Forgot Password page

--- a/nextjs-frontend-user/src/styles/globals.css
+++ b/nextjs-frontend-user/src/styles/globals.css
@@ -1,9 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
   background: #3e3e3f;
+}
+
+html {
+  overflow-y: scroll; /* đảm bảo luôn có thanh cuộn dọc */
 }
 
 @layer base {
